# property-match-tauri

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: auto-tag.yml  ci.yml  cleanup-branches.yml  news-scrape.yml  policy-sync.yml  pudong-fetch.yml  purge-cdn-cache.yml  scheduled-deploy.yml
UI_WORK/: 01_FAB按钮改造.md  02_UI文件结构重构.md  README.md
data/: pudong_policies.json
docs/: ai-matching-plan.md
e2e/: customer-panel.spec.ts
public/data/: news.json  policies.json  properties-buildings.json  properties-filterable.json  properties-parks.json  properties-units.json  stats.json
scripts/: batch-extract-conditions.ts  build-filterable.js  check-css-classes.cjs  clear_old_news.py  export_feishu_to_json.py  feishu_to_supabase.py  pudong_fetch.py  pudong_fetch_and_tag.py  pudong_process.py  pudong_sync.py  pudong_weekly.sh  restore_feishu.py  scrape_zhangtongshe.py
scripts/backup/: get_pudong_token.py  pudong_scrape.py  pudong_scrape_detail_v1.py  pudong_scrape_detail_v2.py  pudong_scrape_v2.py  pudong_scrape_v3.py  pudong_scrape_v4.py  pudong_scrape_v5.py
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: feishu.rs  lib.rs  main.rs
src/app/: App.tsx
src/components/: AIAssistant.tsx  BuildingDetailPanel.tsx  FAB.css  Feedback.tsx  Icons.tsx  Launcher.css  Launcher.tsx  NavBar.tsx  NewsTicker.tsx  (+2 more)
workers/: .dev.vars  README.md  worker-configuration.d.ts  wrangler.toml
(+53 files in other folders)
