[package]
name = "property-match"
version = "1.0.0"
description = "浦东招商智能系统"
authors = ["浦发集团"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["time"] }
url = "2"
